objects/SalesOrgJunction__c.object
<CustomObject>
    <description>Joins Sales Org object and Account</description>
    <label>Sales Org Junction</label>
    <nameField>
        <displayFormat>SOJ-{000000000}</displayFormat>
        <label>Sales Org Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Org Junctions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>SOJ_Key__c</fullName>
        <description>Combination of the Customer Number or Hierarchy Number, Sales Org, and Partner Type</description>
        <externalId>true</externalId>
        <inlineHelpText>Combination of the Customer Number or Hierarchy Number, Sales Org, and Partner Type</inlineHelpText>
        <label>SOJ Key</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Related_Accounts__c</fullName>
        <label>Related Accounts</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Orgs</relationshipLabel>
        <relationshipName>Sales_Org</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Sales_Org__c</fullName>
        <label>PKI SAP Sales Org</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Sales_Orgs__c</fullName>
        <label>Related Sales Orgs</label>
        <referenceTo>SalesOrg__c</referenceTo>
        <relationshipLabel>Related SAP Customer Accounts</relationshipLabel>
        <relationshipName>Related_Customer_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Partner_Type__c</fullName>
        <inlineHelpText>This field is used only when joining Sold-To/Ship-To records to Sales Org records</inlineHelpText>
        <label>PKI SAP Partner Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_SAP_Customer_Number__c</fullName>
        <label>PKI SAP Customer Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Lookups_Last_Modified__c</fullName>
        <description>Used in the UpdateSOJAutomated.apxc to determine whether or not to include this record again.</description>
        <inlineHelpText>Used in the UpdateSOJAutomated.apxc to determine whether or not to include this record again.</inlineHelpText>
        <label>Date Lookups Last Modified</label>
        <type>Date</type>
    </fields>
</CustomObject>